@@ -1,3 +1,9 @@
+Fri Sep 26 13:39:46 2008  Koichi Sasada  <ko1@atdot.net>
+
+	* compile.c, ricsin/ricsin.rb: rename __Cx__ to __Ccont__.
+
+	* ricsin/test.rcb: ditto.
+
 Fri Sep 26 12:53:37 2008  Koichi Sasada  <ko1@atdot.net>
 
 	* ricsin/ricsin.rb: fix to use require_relative.
